style.css
@font-face {
    font-family: 'Futura Md BT';
    src: url('./res/font/Futura Md BT Bold.ttf') format('truetype');
    font-style: normal;
    font-weight: 700;
}

@font-face {
    font-family: 'Futura Md BT';
    src: url('./res/font/Futura Md BT Bold Italic.ttf') format('truetype');
    font-style: italic;
    font-weight: 700;
}

@font-face {
    font-family: 'Futura Md BT';
    src: url('./res/font/Futura Md BT Medium.ttf') format('truetype');
    font-style: normal;
    font-weight: 500;
}

@font-face {
    font-family: 'Futura Md BT';
    src: url('./res/font/Futura Md BT Medium Italic.ttf') format('truetype');
    font-style: italic;
    font-weight: 500;
}

:root {
    --red: #D33438;
}

body {
    display: flex;
    background-color: lightgray;
    display: flex;
    width: 100vw;
    height: 100vh;
    margin: 0px;
}

.roulette-game .header {
    position: relative;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
    font-size: 2rem;
    padding-inline: 80px;
    box-sizing: border-box;
}

.roulette-game .header-nav {
    padding: 0px;
}

.roulette-game-container * {
    font-family: 'Futura Md BT';
    user-select: none;
    font-weight: medium;
}

.roulette-game-container {
    width: 100%;
    height: 100%;
}

.roulette-game {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 32px;
    box-sizing: border-box;
    background-position: bottom;
    background-size: cover;
    background-image: url('./res/Background.png');
    /* width: fit-content; */
}

.roulette-game-container .dynamic {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0px;
    left: 0px;
    z-index: 200;
    padding: 32px;
    box-sizing: border-box;
    pointer-events: none;
}

.roulette-game-container .dynamic button {
    pointer-events: all;
}

.roulette-game .chip-buttons {
    display: flex;
    gap: 16px;
}

.roulette-game .chip-buttons > button {
    transition: 0.2s ease-in-out;
}

.roulette-game .chip-buttons > button:hover {
    transform: scale(1.1);
}

.roulette-game .active-chip {
    outline: 8px solid white;
}

.roulette-game table {
    z-index: 1;
    border-collapse: collapse;
}

.roulette-game table tr td {
    border: 2px solid rgb(204, 204, 204);
}

.roulette-game .gray {
    font-size: 2rem;
    background-color: rgba(0, 0, 0, 0.4);
}

.roulette-game .gray button {
    font-size: 1.2rem;
}

.roulette-game-container .table-extra-button { 
    z-index: 99;
    font-size: 2rem;
    cursor: pointer;
    color: white;
}

.roulette-game-container .table-extra-button:focus {
    outline: none;
    border: none;
}

.roulette-game-container .table-chip-img {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
}

.roulette-game-container .table-chip-text {
    position: relative;
}

.roulette-game td.side {
    width: 48px;
}

.roulette-game button {
    color: white;
    width: 100%;
    height: 100%;
}

.roulette-game > table td {
    width: 64px;
    height: 80px;
    font-size: 2rem;
    color: white;
}

.roulette-game .col-button {
    height: 48px;
}

.roulette-game > table td div {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.roulette-game .indicator-container {
    display: flex;
    flex-direction: column;
    font-size: 1.4rem;
    align-items: center;
}

.roulette-game .indicator {
    font-size: 2rem;
}

.red {
    background-color: #D33438;
}

.black {
    background-color: black;
}

.roulette-game button:focus {
    border: none;
    /* outline: none; */
}

.roulette-game button {
    cursor: pointer;
}

.roulette-game-container .chip {
    position: relative;
    z-index: 100;
    pointer-events: none;
    color: white;
}

.roulette-game-container .chip span {
    font-weight: bold;
    font-size: 1.2rem;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: black;
}

.roulette-game-container .chip-button {
    position: relative;
    border-radius: 100px;
}

.roulette-game-container .chip-number {
    position: relative;
    font-weight: bold;
    font-size: 2em;
}

.roulette-game-container button {
    z-index: 99;
    background: transparent;
    border: none;
}

.roulette-game-container .overlay {
    position: absolute;
    top: 0px;
    right: 0px;
    width: 100%;
    height: 100%;
    z-index: 1000;
    background-color: rgba(150, 150, 150, 0.4);
    display: flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
    transition: all 0.4s ease-in-out;
}

.roulette-game-container .overlay.active {
    pointer-events: all;
}

.roulette-game-container .spinning {
    pointer-events: all;
}

.roulette-game-container .wheel-container {
    position: relative;
    z-index: 500;
    width: 400px;
    height: 400px;
    transition: 0.2s ease-in;
}

.roulette-game-container .wheel-container img {
    position: absolute;
}

.roulette-game-container .wheel-background {
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

.roulette-game-container .wheel-container.spinning img {
    transition: 4s ease-out;
}

.ball-container {
    z-index: 500;
    position: absolute;
    width: 400px;
    height: 400px;
    display: flex;
    justify-content: center;
}

.wheel-container.spinning .ball-container {
    transition: 4.4s ease-out;
}

.ball {
    transform: translateY(16px);
    width: 16px;
    height: 16px;
    border-radius: 100px;
    background-color: lightgray;
}

.wheel-container.spinning .ball {
    transition: 4.4s cubic-bezier(0.835, 0.200, 0.915, -0.240);
}

.roulette-game-container .winning-numbers {
    list-style-type: none;
    position: absolute;
    bottom: 0px;
    color: white;
    padding-left: 18px;
    font-size: 1.5rem;
    height: 200px;
    display: flex;
    flex-direction: column-reverse;
    overflow-y: hidden;

    --mask: linear-gradient(to top, 
      rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 70%, 
      rgba(0,0,0, 0) 95%, rgba(0,0,0, 0) 0
    ) 100% 50% / 100% 100% repeat-x;

    mask: var(--mask);
}

.roulette-game-container .winning-number {
    position: absolute;
    right: 50%;
    transform: translateX(50%);
    top: -100px;
    color: white;
    font-size: 2rem;
    transition: all 0.4s ease-out;
    border: 2px solid white;
    width: 64px;
    padding-block: 24px;
    text-align: center;
}

.roulette-game-container button.mute {
    cursor: pointer;
    position: absolute;
    bottom: 14px;
    left: 14px;
}

.roulette-game-container button.mute-music {
    cursor: pointer;
    position: absolute;
    bottom: 14px;
    left: 80px;
}

.roulette-game-container button.list {
    cursor: pointer;
    position: absolute;
    right: 14px;
    bottom: 14px;
}

.roulette-game-container button.leave {
    cursor: pointer;
    position: absolute;
    right: 80px;
    bottom: 14px;
}

.roulette-game-container button.mute:focus, .roulette-game-container button.list {
    border: none;
}

.roulette-game-container .win-message {
    background-image: url('./res/GradientYouWon.webp');
    background-size: 100% 100%;
    position: absolute;
    left: 50%;
    top: calc(50% + 180px);
    transform: translate(-50%, -50%);
    transition: 0.2s ease-in-out;
    color: white;
    font-weight: bold;
    font-size: 1.5rem;
    min-width: 340px;
    padding-inline: 64px;
    padding-block: 32px;
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 501;
}

.roulette-game-container .win-message .amount {
    font-size: 2.4rem;
}

.roulette-game-container .scoreboard {
    background-color: rgba(0, 0, 0, 0.7);
    border: 2px solid goldenrod;
    padding: 16px;
    border-radius: 16px;
    position: absolute;
    max-width: 140px;
    width: 100%;
    left: 48px;
    top: 128px;
    list-style-type: none;
    color: white;
    padding: 16px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
}

.roulette-game-container .scoreboard .divider {
    width: 50%;
    height: 1px;
    border-bottom: 1px solid gray;
}

.roulette-game-container .scoreboard li {
    display: flex;
    width: 100%;
    flex-direction: column;
    gap: 8px;
}

.roulette-game-container .scoreboard .name {
    display: flex;
}

.roulette-game-container .scoreboard .balance {
    display: flex;
    justify-content: center;
    color: goldenrod;
    font-size: 1.4rem;
}

.bet-list {
    height: 70%;
}

.roulette-game-container .bet-count {
    position: absolute;
    right: 0px;
    top: calc(50% - 10px);
    transform: translate(calc(100% + 16px), -50%);
    /* top: 48px; */
}

.roulette-game-container .game-over-message-container {
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* padding-block: 24px; */
    /* padding-inline: 128px; */
    position: absolute;
    width: 100vw;
    height: 100vh;
    border-radius: 16px;
    color: white;
    font-size: 2rem;
    z-index: 1000;
    gap: 16px;
}

.roulette-game-container .game-over-message {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-block: 24px;
    padding-inline: 128px;
    background: url('./res/GradientWinner.webp');
    background-size: 100% 100%;
}

.roulette-game-container .game-over-message .winner {
    font-weight: bold;
}

.roulette-game-container .game-over-message-container .play-again-button {
    border: 1px solid goldenrod;
    padding: 12px;
    color: goldenrod;
    font-weight: bold;
    padding-block: 4px;
    font-size: 1.2rem;
    background-color: rgba(25, 25, 25);
    cursor: pointer;
    border-radius: 8px;
}

.roulette-game-container .game-over-message-container .play-again-button:hover {
    outline: 2px solid rgba(218, 165, 32, 0.8);
}

.roulette-menu {
    display: flex;
    width: 100vw;
    height: 100vh;
    align-items: center;
    justify-content: center;
    background-color: black;
}

#modes-list {
    display: flex;
    align-items: flex-start;
}

.roulette-menu button {
    background-color: transparent;
    border: none;
    margin-bottom: 8px;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 8px;
    justify-content: center;
}

.roulette-menu button:hover {
    outline: 2px solid white;
}

.roulette-menu input {
    width: 100%;
    height: 32px;
    padding-left: 8px;
    box-sizing: border-box;
    background-color: rgb(101, 101, 101);
    color: white;
    border: none;
    border-radius: 8px;
}

.roulette-menu input::placeholder {
    color: rgb(186, 186, 186);
}

.loading-screen-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: black;
    width: 100vw;
    height: 100vh;
}

.loading-screen-container .bar-container {
    width: 240px;
}

.loading-screen-container .bar {
    border-bottom: 2px solid white;
    transition: 1s ease-in-out;
}

.loading-screen-container .logo {
    width: 240px;
}

/* 
.roulette-game-container .winning-numbers::after {
    content: "";
    position: absolute;
    z-index: 1;
    top: 0px;

    width: 100%;
    height: 80px;
} */

/* @keyframes spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(1080deg);
    }
}

.spin {
    animation: 4s spin infinite ;
} */

